Replacing 'OpenMoko' with 'Openmoko'

--- a/UI_Improvements%2Ffr.mw
+++ b/UI_Improvements%2Ffr.mw
@@ -219,7 +219,7 @@ The [http://www.strout.net/info/ideas/hexinput.html hexinput] concept is interes
 
 ===Choosing the right GUI toolkit===
 
-There are [http://www.hbmobile.org/wiki/index.php?title=GUI_Frameworks lots of possible GUI frameworks] with various software architectures that can be used for OpenMoko.
+There are [http://www.hbmobile.org/wiki/index.php?title=GUI_Frameworks lots of possible GUI frameworks] with various software architectures that can be used for Openmoko.
 
 GTA01 hardware uses GTK+/matchbox without hardware acceleration, and it's not enough: this is a first that a mobile linux device has such a high DPI resolution.
 
@@ -316,7 +316,7 @@ The same, but for the wheel. It can be very short to do: you don't have 1:1 anym
 ===Left-handed UI Support===
 
 ====Description====
-A discussion on the community list identified a desire to have the ability to switch the OpenMoko UI into "left-handed" mode.  
+A discussion on the community list identified a desire to have the ability to switch the Openmoko UI into "left-handed" mode.  
 
  The main problem is scrollbars, when they're on the right dragging  
  the scrollbar left handed results in your hand covering the screen so  
