Replacing 'OpenMoko' with 'Openmoko'

--- a/The_USB_Control_Device_Class_Abstract_Control_Model_-_CDC_ACM.mw
+++ b/The_USB_Control_Device_Class_Abstract_Control_Model_-_CDC_ACM.mw
@@ -6,7 +6,7 @@
 
 The Neo1973 [[u-boot]] boot loader contains support for obtaining the boot loader prompt over USB CDC ACM.
 
-The OpenMoko kernel also contains CDC ACM device support, contained in the '''g_serial.ko''' kernel module.
+The Openmoko kernel also contains CDC ACM device support, contained in the '''g_serial.ko''' kernel module.
 
 === Host PC and CDC ACM ===
 
