Replacing 'OpenMoko' with 'Openmoko'

--- a/USB_DFU_-_The_USB_Device_Firmware_Upgrade_standard.mw
+++ b/USB_DFU_-_The_USB_Device_Firmware_Upgrade_standard.mw
@@ -8,9 +8,9 @@ The current version is 1.1, it can be found for free download at http://www.usb.
 
 Despite its clear architecture and DFU being an official USB standard, very few companies are known to have implemented it in their products.  In the Free Software / Hardware area, most notably the [http://www.openpcd.org/ OpenPCD] project has used it for their Free RFID readers.  
 
-== OpenMoko and USB DFU ==
+== Openmoko and USB DFU ==
 
-Since OpenMoko is a big supporter of open standards and protocols, it has chosen USB DFU as the way to do "firmware" (actually, general software) updates on its official devices.
+Since Openmoko is a big supporter of open standards and protocols, it has chosen USB DFU as the way to do "firmware" (actually, general software) updates on its official devices.
 
 === USB DFU host utility ===
 
