Replacing 'OpenMoko' with 'Openmoko'

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -1,4 +1,4 @@
-= OpenMoko Networking Setup =
+= Openmoko Networking Setup =
 
 In order to communicate via TCP/IP to your FreeRunner, a basic understanding of the networking expectations is required.  Each end of the USB connection forms a LAN (local area network) segment, with the FreeRunner's USB networking device at one end (default 192.168.0.202) and your laptop or desktop at the other end (192.168.0.200 in this guide).
 
