Replacing 'OpenMoko' with 'Openmoko'

--- a/USB_Networking%2Fde.mw
+++ b/USB_Networking%2Fde.mw
@@ -10,7 +10,7 @@ Wenn Sie auf dem Neo voll qualifizierte Hostnamen im Internet erreichen wollen, 
 
 z.B. nameserver 192.168.1.1
 
-Danach können Sie auf dem Neo Ihre OpenMoko 2007.2 Pakete mit "ipkg update && ipkg upgrade" aktualisieren.
+Danach können Sie auf dem Neo Ihre Openmoko 2007.2 Pakete mit "ipkg update && ipkg upgrade" aktualisieren.
 
 Ein besserer Ansatz ist ein symbolischer Link
 
@@ -211,7 +211,7 @@ Dabei ist <tt>192.168.0.1</tt> die IP Adresse des Heimatgateways (Routers). Dies
 
 Zum Anmelden am Neo <tt>ssh root@192.168.0.202</tt> mit dem leeren root Passwort
 
-Notiz: Der SSH Daeomon (dropbear 0.49) im OpenMoko scheint einen Bug beim Zurückgeben des Verbindungsstatus an den Client zu haben. Ab und zu bekommen sie einen Rückgabewert 255.
+Notiz: Der SSH Daeomon (dropbear 0.49) im Openmoko scheint einen Bug beim Zurückgeben des Verbindungsstatus an den Client zu haben. Ab und zu bekommen sie einen Rückgabewert 255.
 
 ===SSH Extras===
 
