Replacing 'OpenMoko' with 'Openmoko'

--- a/USB_Product_IDs.mw
+++ b/USB_Product_IDs.mw
@@ -1,4 +1,4 @@
-We are using the USB Vendor and Product IDs below.  Note that 0x1457 is the Vendor ID of FIC, Inc, and 0x1d50 is the vendor ID of OpenMoko, Inc.
+We are using the USB Vendor and Product IDs below.  Note that 0x1457 is the Vendor ID of FIC, Inc, and 0x1d50 is the vendor ID of Openmoko, Inc.
 
 {| border=1 |
 | Vendor ID || Product ID || Description 
