--- a/US_850_band_users_wanting_to_sell_Neo.mw
+++ b/US_850_band_users_wanting_to_sell_Neo.mw
@@ -14,7 +14,7 @@ Because the phase 1 Neo1973 was intended as a developer release a number of Nort
 
 === Will a modification to my Neo 1973 (GTA01bv4) be possible? ===
 
-As of Feb 08, it has been confirmed by OpenMoko[http://article.gmane.org/gmane.comp.handhelds.openmoko.community/9196] that this is not possible, presumably due to the difficulties in getting FCC approval for a (relatively) small number of phones for a model which is no longer in production.
+As of Feb 08, it has been confirmed by Openmoko[http://article.gmane.org/gmane.comp.handhelds.openmoko.community/9196] that this is not possible, presumably due to the difficulties in getting FCC approval for a (relatively) small number of phones for a model which is no longer in production.
 
 The best option for those with GTAO1 phones in areas where they need 850MHz is therefore to get a Neo FreeRunner instead which everyone presumes will have an 850MHz option (a check on actual performance with 850MHz has already been done).
 
