--- a/Manuals.mw
+++ b/Manuals.mw
@@ -1,5 +1,5 @@
 =Welcome=
-Thank you for using OpenMoko. This manual gives an overview of OpenMoko's vast array of built in software, as well as some of the more popular community applications.  This manual is a work in progress, but you can help by adding to it. If you do, feel free to add your name to the contributor's section.
+Thank you for using Openmoko. This manual gives an overview of Openmoko's vast array of built in software, as well as some of the more popular community applications.  This manual is a work in progress, but you can help by adding to it. If you do, feel free to add your name to the contributor's section.
 
 =Contents=
 ==Basics==
