Replacing 'OpenMoko' with 'Openmoko'

--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -2,7 +2,7 @@ For information about the official downloads and distributions, see [[Downloads]
 
 === Angstrom Repository ===
 
-Angstrong is the base distribution of OpenMoko Linux distribution. It contains the basic set of Linux applications and they should be compatible with OpenMoko. [http://www.angstrom-distribution.org/repo/ The repository package listing].
+Angstrong is the base distribution of Openmoko Linux distribution. It contains the basic set of Linux applications and they should be compatible with Openmoko. [http://www.angstrom-distribution.org/repo/ The repository package listing].
 
 To add the unstable Angstrom feed, update your ''/etc/opkg/base-feeds.conf'' to include a line:
 
