Replacing 'OpenMoko' with 'Openmoko'

--- a/Using_QEMU_with_MokoMakefile.mw
+++ b/Using_QEMU_with_MokoMakefile.mw
@@ -1,8 +1,8 @@
-[[MokoMakefile]] has support for automatically building, flashing, and running [[OpenMoko under QEMU]] using qemu-neo1973, a fork of qemu which adds simulation of almost all [[Neo1973]] devices   in order allow testing OpenMoko images in a virtual environment.
+[[MokoMakefile]] has support for automatically building, flashing, and running [[Openmoko under QEMU]] using qemu-neo1973, a fork of qemu which adds simulation of almost all [[Neo1973]] devices   in order allow testing Openmoko images in a virtual environment.
 
-For this, it's not required to download and run a complete OpenMoko build (which takes several hours to even days and needs lots of disk space and RAM), because if you only need to test pre-compiled images, it is enough to build qemu-neo1973 and to set it up to run these images. This is what this article deals with and to describe how MokoMakefile makes this easy.
+For this, it's not required to download and run a complete Openmoko build (which takes several hours to even days and needs lots of disk space and RAM), because if you only need to test pre-compiled images, it is enough to build qemu-neo1973 and to set it up to run these images. This is what this article deals with and to describe how MokoMakefile makes this easy.
 
-Note: The [[Talk:MokoMakefile|talk page of MokoMakefile]] may also contain some valuable hints regarding compiling and using QEMU for [[OpenMoko]], including distribution specific issues and workarounds.
+Note: The [[Talk:MokoMakefile|talk page of MokoMakefile]] may also contain some valuable hints regarding compiling and using QEMU for [[Openmoko]], including distribution specific issues and workarounds.
 
 == Build requirements ==
 *gcc 3.4 or 3.3: You need gcc-3.x for building qemu. If you have no precompiled gcc-3.x packages, you need to compile it. [http://en.opensuse.org/Qemu_with_kqemu_kernel_module_support#GCC-3.3.6]
@@ -50,21 +50,21 @@ If that doesn't work, try
   wget http://svn.projects.openmoko.org/svnroot/mokomakefile/trunk/Makefile
 
 
-“'''make qemu'''” will build qemu-neo1973, download the latest official OpenMoko images, flash the images into the virtual NAND flash, create an empty virtual SD card, and run the emulator (you still need to install the makefile as mentioned above, however).
+“'''make qemu'''” will build qemu-neo1973, download the latest official Openmoko images, flash the images into the virtual NAND flash, create an empty virtual SD card, and run the emulator (you still need to install the makefile as mentioned above, however).
 
-* <code>'''make run-qemu'''</code> - restarts qemu with the currently flashed OpenMoko images and current virtual SD card.
+* <code>'''make run-qemu'''</code> - restarts qemu with the currently flashed Openmoko images and current virtual SD card.
 * <code>'''make run-qemu-snapshot'''</code> - does the same but starts qemu with -snapshot which causes QEMU to write all changes to temporary files instead of flash and disk image files.<BR>This is beneficial in that the virtual Neo1973 is not changed.  Also all changes that <code>make run-qemu-snapshot</code> creates occur in parallel.  This allows you to run multiple instances without creating incoherent flash and SD card state.  You can, however, force the write back by pressing <code>C-a s</code> in the QEMU window. This may be useful to update the flash and disk images in the last qemu instance that is running to preserve the changes.
 
 You may also use:
 * <code>'''make download-images'''</code> - to download the latest official images
 * <code>'''make flash-qemu-official'''</code> - to flash those images
 * <code>'''make flash-qemu-local'''</code> - to flash your latest locally built images, which can then be followed by
-* <code>'''make qemu-copy-package-''foo'''''</code> - copies <code>''foo''.ipk</code> to the virtual SD card,  which allows you to use <code>ipkg install /media/mmcblk0/''file''</code> inside the running OpenMoko to install the package.
+* <code>'''make qemu-copy-package-''foo'''''</code> - copies <code>''foo''.ipk</code> to the virtual SD card,  which allows you to use <code>ipkg install /media/mmcblk0/''file''</code> inside the running Openmoko to install the package.
 
 If you want to calibrate your screen,
 look at [http://onlinedev.blogspot.com/2007/08/calibrating-openmoko-v20072.html]
 
-For detailed information on advanced usage of qemu-neo1973 see also: ''[[OpenMoko under QEMU]]''
+For detailed information on advanced usage of qemu-neo1973 see also: ''[[Openmoko under QEMU]]''
 
 If you get an error while flashing, see [http://lists.openmoko.org/pipermail/community/2008-March/014356.html]
 
