Replacing 'OpenMoko' with 'Openmoko'

--- a/Variometer.mw
+++ b/Variometer.mw
@@ -77,5 +77,5 @@ Apply knowledge about the aircraft dynamics to increase accuracy:
 
 ====Server Based Services====
 Auto discovery service
-*Pilots with OpenMoko based variometers can choose to publish their status on a central service.
+*Pilots with Openmoko based variometers can choose to publish their status on a central service.
 *Based on location - the system will notify pilots of the presence of others that can participate in group flying.
