Replacing 'OpenMoko' with 'Openmoko'

--- a/WM8753.mw
+++ b/WM8753.mw
@@ -71,7 +71,7 @@ These modes are abstract definitions, which (atm) are represented by some *.stat
 
 * [http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf The WM8753 data sheet] (PDF) 
 
-* asoc-* at [https://svn.openmoko.org/trunk/src/target/kernel/patches/ OpenMoko kernel patches]
+* asoc-* at [https://svn.openmoko.org/trunk/src/target/kernel/patches/ Openmoko kernel patches]
 
 [[Category:Neo1973 Hardware]]
 [[Category:Neo FreeRunner Hardware]]
