Replacing 'OpenMoko' with 'Openmoko'

--- a/Why_Openmoko.mw
+++ b/Why_Openmoko.mw
@@ -55,13 +55,13 @@ Linux is the best way to program. All that still stands true, as Openmoko is all
 * '''Easy application development:''' Since it makes use of popular technologies, it’s pretty easy to get up and running with Openmoko in a very short period of time. All Linux programmers will feel at home, as Openmoko makes use of popular open source components like GTK, X server, ALSA and so on.
 * '''Low on hardware requirements:''' It doesn’t require a very high-end configuration to run on.
 * '''Great developer support:''' Even though the project is in its infancy, it already has got great community support. Apart from this, all the components used in building Openmoko have their own communities. So, there may already be someone to help you out.
-* '''A very rich API:''' OpenMoko has got a very rich set of APIs. A few have been developed exclusively for OpenMoko, while the others are simply derived from other projects. OpenMoko enables you to use your existing skill set to create the phone applications that you want to.
+* '''A very rich API:''' Openmoko has got a very rich set of APIs. A few have been developed exclusively for Openmoko, while the others are simply derived from other projects. Openmoko enables you to use your existing skill set to create the phone applications that you want to.
 
 ==The Openmoko Architecture==
 The Openmoko architecture is simple, yet very powerful. Most of it is based on already-available open source technologies. However, new technologies have also been developed exclusively for the platform. Openmoko consists of the following major components:
 [[Image:Software1.jpg]]
 
-* '''Linux kernel 2.6 and associated device drivers:''' The project makes use of the vanilla kernel 2.6 series, patched against OpenMoko-specific patches. The patch set includes additional support for various embedded devices like USB, SD, touch screen, and communication drivers. All these drivers reside in the kernel space, and are loaded at boot time.
+* '''Linux kernel 2.6 and associated device drivers:''' The project makes use of the vanilla kernel 2.6 series, patched against Openmoko-specific patches. The patch set includes additional support for various embedded devices like USB, SD, touch screen, and communication drivers. All these drivers reside in the kernel space, and are loaded at boot time.
 * '''Linux Core (or system) services:'''
 
 ** '''udev:''' It acts as the device manger and maintains all the device nodes in a pseudo /dev filesystem. udev provides a standard way for device components to interact.
@@ -87,7 +87,7 @@ The Openmoko architecture is simple, yet very powerful. Most of it is based on a
 **'''Stylus applications:''' Includes contacts, messages, search applications, etc.
 **'''Third-party applications:''' Various heavy-duty applications like Web browsers, instant messaging applications, etc.
 
-Subsequent to this quick introduction to the upcoming Openmoko platform, in forthcoming articles I’ll show you how to build and run OpenMoko applications. The experience is like hacking the world’s best phone environment at your workbench—and yes, nobody is going to sue you! Dont forget to post in your comments at kunaldeo at gmail.com
+Subsequent to this quick introduction to the upcoming Openmoko platform, in forthcoming articles I’ll show you how to build and run Openmoko applications. The experience is like hacking the world’s best phone environment at your workbench—and yes, nobody is going to sue you! Dont forget to post in your comments at kunaldeo at gmail.com
 
 --[[User:Kunaldeo|Kunaldeo]] 10:54, 30 June 2008 (UTC)
 
