Replacing 'OpenMoko' with 'Openmoko'

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -9,19 +9,19 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ==Wiki Pages==
 ===Pages capable of development===
-* [[OpenMoko:Community Portal]]
+* [[Openmoko:Community Portal]]
 * [[Documentation]]
 * [[AGPSD]] (Needs new GPS info)
 * [[AR6K]] (Needs more info)
 
 ===Redundant Pages===
-* There are several pages concerning OpenMoko compatible service providers:
+* There are several pages concerning Openmoko compatible service providers:
 ** [[Carriers]], most up-to-date, confirmed service providers.
 *** [[Carriers/ATT]]
 *** [[Carriers/TMobile]]
 *** [[Carriers/Fido]]
 *** [[Carriers/Rogers]]
-** [[OpenMoko compatible cellphone providers]]
+** [[Openmoko compatible cellphone providers]]
 ** [[Neo1973 compatible cellphone providers]]
 
 *I suggest merging the editing help pages:
