Replacing 'OpenMoko' with 'Openmoko'

--- a/Window_Manager_Startup.mw
+++ b/Window_Manager_Startup.mw
@@ -101,7 +101,7 @@ Loads the X server preferences from $HOME/.Xdefaults if it exists.  The command 
 xdb -merge -nocpp < $HOME/.Xdefaults
 </pre>
 
-There is currently not an .Xdefaults file in the OpenMoko image, therefore this script does nothing.
+There is currently not an .Xdefaults file in the Openmoko image, therefore this script does nothing.
 
 === Gnome Configuration Server ===
 A script at:
@@ -127,7 +127,7 @@ This script executes:
 /usr/bin/settings-daemon &
 </pre>
 
-The current description in the OpenMoko repository says that the "settings-daemon provides a bridge between gconf and xsettings".
+The current description in the Openmoko repository says that the "settings-daemon provides a bridge between gconf and xsettings".
 
 === Window Manager Startup ===
 A script at:
@@ -163,7 +163,7 @@ Test for the existence of:
 <pre>
 /etc/matchbox/session
 </pre>
-In the case of OpenMoko, this test is positive and session is exec'ed.
+In the case of Openmoko, this test is positive and session is exec'ed.
 
 Taking a quick look at the script shows that one can override the use of /etc/matchbox/session with their own $HOME/.matchbox/session if they wish to experiment without touching the rest of the system.
 
@@ -229,7 +229,7 @@ alsactl restore 0 -f /etc/alsa/stereoout.state
 
 Initializes the audio system state.  More information for ALSA can be found on the [http://www.alsa-project.org/ ALSA] Project home page.
 
-=== OpenMoko Footer ===
+=== Openmoko Footer ===
 A binary at:
 <pre>
 /usr/bin/openmoko-footer
@@ -242,7 +242,7 @@ openmoko-footer &
 
 More about [[Footer]].
 
-=== OpenMoko Today ===
+=== Openmoko Today ===
 A binary at:
 <pre>
 /usr/bin/openmoko-today
@@ -255,7 +255,7 @@ openmoko-today --desktop &
 
 More about [[Today]].
 
-=== OpenMoko Dialer ===
+=== Openmoko Dialer ===
 A binary at:
 <pre>
 /usr/bin/openmoko-dialer
